# test

./: .env.example  .replit  SAMPLE_QUESTIONS.md  SETUP.md  TIMESTAMP_TEST_QUERIES.md  database.py  llm_service.py  main.py  models.py  pyproject.toml  replit.md  run_local.py  test_connection.py  validators.py
attached_assets/: Pasted--42-C-Users-17908-Desktop-V2-test-malmpython-main-py-INFO-Will-watch-for-changes-in-these-directo-1753684577981_1753684577982.txt
core/database/: connect.py  database.py  disconnect.py  execute_query.py  format_schema_for_llm.py  get_connection_params.py  get_schema_info.py  get_table_sample_data.py  test_connection.py
core/llm/: __init__.py  build_prompt.py  call_groq_api.py  explain_query.py  extract_sql_from_response.py  generate_sql.py  llm_service.py
core/models/: __init__.py  chat_message.py  database_column.py  database_table.py  llm_response.py  query_context.py  query_type.py  validation_result.py
core/validators/: __init__.py  check_dangerous_functions.py  check_dangerous_keywords.py  check_dangerous_patterns.py  extract_table_names.py  get_query_type.py  has_multiple_statements.py  sanitize_input.py  validate_query.py  validate_select_query.py  validators.py
static/: script.js  style.css
templates/: index.html
